Fix modal, drawer overflow lock

--- a/docs/5.0/zh-tw/assets/style.css
+++ b/docs/5.0/zh-tw/assets/style.css
@@ -12,8 +12,12 @@ body {
     background: var(--ts-gray-50);
 }
 
-body:has(dialog[open]) {
-    overflow-y: auto !important;
+body:has(dialog#modal[open], dialog#drawer[open]) {
+    overflow-y: hidden !important;
+}
+
+body:has(dialog.ts-modal[open], dialog.ts-app-drawer[open]) {
+    overflow: auto !important;
 }
 
 /**
